# freeminer_build

./: CMakeLists.txt
cmake/: curl.cmake  freetype.cmake  gettext.cmake  installation.cmake  irrlicht.cmake  leveldb.cmake  license.cmake  luajit.cmake  msgpack.cmake  ogg.cmake  openal.cmake  snappy.cmake  vorbis.cmake  zlib.cmake
win64/: build.sh
win64/fedora20/: env.sh  toolchain.cmake  toolchain_mingw64.cmake
win64/fedora21/: toolchain.cmake  toolchain_mingw64.cmake
